# DACON

./: .gitignore  README.md
medical-ai-2025/: main.py  pyproject.toml
power-usage-forecast-2025/: README.md  main.py  pyproject.toml
