[project]
name = "power-usage-forecast-2025"
version = "0.1.0"
description = "2025 전력사용량 예측 AI 경진대회"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hvplot>=0.11.3",
    "ipykernel>=6.29.5",
    "jupyter-bokeh>=4.0.5",
    "kaleido>=1.0.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "statsmodels>=0.14.5",
]
